dataset1235/2025-2/2947369575/users/2743879364/executions/3873599344_146336312.log
== RUN (2025-08-20 22:56:29)
-- CODE: 
print(50/3)
print(round(16.666666666666668,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:00:52)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:57:55)
-- CODE: 
print(50/3)
print(round(16.666666666666668,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:57:17)
-- CODE: 
print(50/4)
print(round(16.666666666666668,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:57)
-- CODE: 
print(50//3%)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3%)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50//3%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:58:26)
-- CODE: 
print(50/3)
print(round(16.666666666666668,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.7
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:56:44)
-- CODE: 
print(50/3)
print(round(16.666666666666668,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:11)
-- CODE: 
print(50//3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:56:38)
-- CODE: 
print(50/3)
print(round(16.666666666666668,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.7
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:40)
-- CODE: 
print(50//3)
print(%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(%)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(%)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:00:01)
-- CODE: 
print(50//3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:54:54)
-- CODE: 
print(50/3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:00:55)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:57:56)
-- CODE: 
print(50/3)
print(round(16.666666666666668,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:59:28)
-- CODE: 
print(50//3)
%
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    %
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    %
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
